# ai-okx-trader

./: .env  .env.example  .env.strategy.example  .gitignore  .windsurfrules  README.md  pyproject.toml  requirements.txt  start.bat  start.sh  ta_lib-0.6.8-cp313-cp313-win_amd64.whl  快速开始.md
backtest/: __init__.py  analyzer.py  engine.py  run.py  simulator.py
backtest/data/: __init__.py  loader.py
deployment/: Dockerfile  docker-compose.yml
deployment/systemd/: ai-trader.service
docs/: TA-Lib指标模块使用说明.md  交易记录功能说明.md  初步方案.md  可配置策略系统使用指南.md  回测模块使用说明.md  开发实现方案.md  手动设置止损止盈.md  标的筛选脚本使用说明.md  模拟盘与实盘配置.md  策略参数配置说明.md  策略配置系统使用指南.md  简化开发方案.md
logs/: ai_trader_20260208_223708.txt  position_state.json
scripts/: check_uxlink.py  init_db.py  set_stop_loss.py  symbol_screener.py  symbol_screener.稳健.py
src/: __init__.py  main.py
src/ai/: agent.py
src/config/: prompts copy.py  prompts.0207还可以.py  prompts.py  prompts.严格版.py  prompts.稳健不赚钱v2.py  prompts.稳健版.py  settings.py  strategy_loader.py
src/data/: models.py  okx_client.py  position_state.py  redis_state.py  symbol_pool_manager.py
src/indicators/: ta_calculator.py
src/monitor/: logger.py
src/notify/: dingtalk.py
src/risk/: manager.py
src/utils/: db.py  redis_client.py
strategies/: 15m_trend_following.yaml  1h_swing.yaml  5m_scalping.yaml
tests/: test_all_positions.py  test_api.py  test_close_position.py  test_dingtalk.py  test_position.py  test_strategy_loader.py  test_trade_records.py
